--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
-version: '1.0'
+version: '3.8'
 services:
   web:
     build: .
+    container_name: crypto_backend
     ports:
       - "8000:8000"
     env_file:
@@ -14,10 +15,13 @@ services:
       - db
   db:
     image: postgres:17.6
+    container_name: crypto_db
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
 
