--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-phonenumber-field==8.1.0
 django-redis==6.0.0
 django-timezone-field==7.1
 django_celery_results==2.6.0
+gunicorn==23.0.0
 kombu==5.5.4
 packaging==25.0
 phonenumberslite==9.0.10
