--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
 amqp==5.3.1
 asgiref==3.9.1
+attrs==25.3.0
+autobahn==24.4.2
+Automat==25.4.16
 babel==2.17.0
 billiard==4.2.1
 celery==5.5.3
 celery-types==0.23.0
+cffi==2.0.0
+channels==4.3.1
+channels_redis==4.3.0
 click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
 colorama==0.4.6
+constantly==23.10.4
 cron_descriptor==2.0.6
+cryptography==46.0.1
+daphne==4.2.1
 Django==5.2.6
 django-authtools==2.0.1
 django-celery-beat==2.8.1
@@ -20,21 +29,33 @@ django-redis==6.0.0
 django-timezone-field==7.1
 django_celery_results==2.6.0
 gunicorn==23.0.0
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
 kombu==5.5.4
+msgpack==1.1.1
 packaging==25.0
 phonenumberslite==9.0.13
 pillow==11.3.0
 prompt_toolkit==3.0.52
 psycopg2-binary==2.9.10
 py-moneyed==3.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+pyOpenSSL==25.3.0
 python-crontab==3.3.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 redis==6.4.0
+service-identity==24.2.0
 setuptools==80.9.0
 six==1.17.0
 sqlparse==0.5.3
+Twisted==25.5.0
+txaio==25.6.1
 typing_extensions==4.15.0
 tzdata==2025.2
 vine==5.1.0
 wcwidth==0.2.13
+zope.interface==8.0
