--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ django-phonenumber-field==8.3.0
 django-redis==6.0.0
 django-timezone-field==7.1
 django_celery_results==2.6.0
+django_singleton_model==0.2.3
 gunicorn==23.0.0
 hyperlink==21.0.0
 idna==3.10
