--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ daphne==4.2.1
 Django==5.2.7
 django-authtools==2.0.2
 django-celery-beat==2.8.1
+django-countries==7.6.1
 django-debug-toolbar==6.0.0
 django-money==3.5.4
 django-phonenumber-field==8.3.0
@@ -36,6 +37,7 @@ incremental==24.7.2
 kombu==5.5.4
 msgpack==1.1.1
 packaging==25.0
+phonenumbers==9.0.16
 phonenumberslite==9.0.15
 pillow==11.3.0
 prompt_toolkit==3.0.52
